--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,27 @@
-// Начните писать стили здесь
+// Миксины
+@import "./mixin.less";
+
+// Базовые стили
+@import "./base/fonts.less";
+@import "./base/global.less";
+
+// Блоки компонентов
+@import "./blocks/advantages.less";
+@import "./blocks/button-like.less";
+@import "./blocks/button.less";
+@import "./blocks/fieldset-review.less";
+@import "./blocks/footer.less";
+@import "./blocks/gallery-list.less";
+@import "./blocks/gallery.less";
+@import "./blocks/header.less";
+@import "./blocks/hero.less";
+@import "./blocks/label-form.less";
+@import "./blocks/list-service.less";
+@import "./blocks/modal-error.less";
+@import "./blocks/modal-suksessfull.less";
+@import "./blocks/review-form.less";
+@import "./blocks/review.less";
+@import "./blocks/search-hotel.less";
+
+// Переменные
+@import "./variables.less";
