Верстка адаптивной сетки

--- a/source/less/base/global.less
+++ b/source/less/base/global.less
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  width: 320px;
+  min-width: 320px;
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
@@ -30,7 +30,7 @@ body {
   min-height: 100%;
 }
 
-.main {
+main {
   // Sticky footer
   flex-grow: 1;
 }
