--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -5,6 +5,11 @@
   display: block;
   box-sizing: border-box;
   background-color: @blue;
+  margin: 0 auto;
   padding: 16px 20px;
   min-width: 280px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
