--- a/source/less/blocks/fieldset-review.less
+++ b/source/less/blocks/fieldset-review.less
@@ -1,14 +1,19 @@
 .fieldset-review {
   border-style: none;
   padding: 0;
-  }
+}
 
 .fieldset-review__legend {
   .title;
   text-align: center;
+  margin-bottom: 28px;
 }
 
 .fieldset-review__label {
-  display: inline-block;
-  margin-top: 20px;
+
+  &--flex {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+  }
 }
