--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,14 +1,40 @@
 .footer {
 }
+
 .footer__container {
   text-align: center;
-  width: 100%;
+  margin: 0 auto;
+  width: 320px;
+  padding: 0;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
 }
 
 .footer__map {}
 
 .footer__contact {
   padding: 33px 78px;
+  width: 320px;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 768px;
+    padding: 36px 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
 }
 
 .footer__hashtag {
@@ -23,8 +49,11 @@
   margin-top: 30px;
   padding: 0;
   text-align: center;
-  justify-content: center;
   list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .footer__social-item {
@@ -56,13 +85,27 @@
 }
 
 .footer__copyright {
-  margin-top: 30px;
-  text-align: center;
+  display: flex;
   align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+  }
 }
 
 .footer__copyright-text {
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 12px;
+  }
 }
 
-.footer__copyright-link {}
+.footer__copyright-link {
+  display: inline-block;
+  height: 34px;
+  width: 27px;
+}
