--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,19 +1,42 @@
 .header {
+  margin-bottom: -40px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    height: 56px;
+  }
 }
 
 .header__container {
   display: flex;
+  box-sizing: border-box;
+  width: 320px;
+  padding: 0;
+  margin: 0 auto;
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
 }
 
 .header__logo {
   margin-left: auto;
   z-index: 2;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .header__nav {
   display: block;
-  margin: 17px 20px;
-  height: 29px;
+  margin: 17px 25px;
 }
 
 .header__burger {
@@ -21,32 +44,62 @@
   border: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
-.header__menu {
-  display: none;
+.header__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0;
   position: absolute;
   background-color: @blue;
-  min-width: 160px;
   z-index: 2;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 320px;
   text-align: center;
+  list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 768px;
+    min-height: 56px;
+    margin: 0 auto;
+    background: none;
+    z-index: 1;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+  }
+}
+
+.header__item {
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+  }
 }
 
 .header__link {
   display: block;
   width: auto;
   text-decoration: none;
-  padding: 17px 20px 12px;
-  box-shadow: 0px 1px 0px rgba(1, 1, 1, 0.2), inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+  padding: 17px 20px 17px;
+  box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
   .title (@white);
+
+  @media (min-width: @tablet-width) {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    color: @black;
+    box-shadow: none;
+  }
 }
-
-
-// .header__burger:hover {
-//   .header__menu {
-//     display: block;
-//   }
-// }
