--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -1,10 +1,13 @@
 .hero {
+  box-sizing: border-box;
+  width: 320px;
+  padding: 90px 18px 85px;
+  margin: 0 auto;
   background-color: @black;
   background-image: url("../img/hero-background.jpg"), url("../img/hero-welcome-down.svg");
   background-repeat: no-repeat, no-repeat;
   text-align: center;
-  padding: 90px 19px 85px;
-  margin-top: -40px;
 }
+.hero__welcome {
 
-.hero__welcome {}
+}
