--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,15 +1,14 @@
 .advantages {
   margin: 0 auto;
+  width: 100%;
 }
 
 .advantages__header {
   box-sizing: border-box;
   margin: 0 auto;
-  width: 320px;
   padding: 32px 18px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
     padding: 47px 124px 55px;
   }
 }
@@ -49,12 +48,10 @@
   list-style-type: none;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
     flex-direction: row;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1200px;
     flex-direction: row;
   }
 }
@@ -69,7 +66,6 @@
 
 .advantages__container {
   padding: 33px 18px 40px;
-  width: 320px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
@@ -102,18 +98,15 @@
 }
 
 .advantages__list-service {
-  width: 280px;
   margin: 0;
   padding: 0 18px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
     display: flex;
     flex-wrap: wrap;
   }
 
   @media (min-width: @tablet-width) {
-    width: 1200px;
     margin: 0 auto;
   }
 }
