--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,40 +1,25 @@
 .footer {
-}
-
-.footer__container {
   text-align: center;
   margin: 0 auto;
-  width: 320px;
   padding: 0;
   box-sizing: border-box;
-
-  @media (min-width: @tablet-width) {
-    width: 768px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1200px;
-  }
+  width: 100%;
 }
 
-.footer__map {}
+.footer__map {
+}
 
 .footer__contact {
   padding: 33px 78px;
-  width: 320px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 768px;
     padding: 36px 60px;
   }
 
-  @media (min-width: @desktop-width) {
-    width: 1200px;
-  }
 }
 
 .footer__hashtag {
