--- a/source/less/blocks/gallery-list.less
+++ b/source/less/blocks/gallery-list.less
@@ -27,6 +27,7 @@
 }
 
 .gallery-list__item-container {
+  text-align: left;
   @media (min-width: @tablet-width) {
     background-color: @input;
     display: flex;
@@ -40,16 +41,9 @@
     color: @white;
   }
 }
-.gallery-list__item-container-description {
-
-}
 
 .gallery-list__item-description {
   display: block;
-}
-
-.gallery-list__item-container-button {
-
 }
 
 .gallery-list__item-button {
