--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -1,13 +1,9 @@
 .hero {
   box-sizing: border-box;
-  width: 320px;
-  padding: 90px 18px 85px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 90px 0 85px;
   background-color: @black;
   background-image: url("../img/hero-background.jpg"), url("../img/hero-welcome-down.svg");
   background-repeat: no-repeat, no-repeat;
   text-align: center;
-}
-.hero__welcome {
-
 }
