--- a/source/less/blocks/search-hotel.less
+++ b/source/less/blocks/search-hotel.less
@@ -2,33 +2,30 @@
   margin: 0 auto;
   text-align: center;
   box-sizing: border-box;
-  width: 320px;
+  padding: 38px 29px 49px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    padding: 60px 155px 56px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1200px;
-  }
-}
-
-.search-hotel__container {
-  padding: 38px 29px 32px;
-
-  @media (min-width: @tablet-width) {
-    padding: 60px 166px 44px;
+    padding: 60px 382px 66px;
   }
 }
 
 .search-hotel__title {
   margin: 0;
+  margin-bottom: 25px;
   .title-bigger(bigger; 18px);
 }
 
 .search-hotel__description {
   margin: 0;
-  margin-top: 20px;
+  margin-bottom: 25px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 45px;
+  }
 }
 
 .search-hotel__link {
@@ -38,15 +35,5 @@
   background-color: @blue;
   color: @white;
   padding: 16px 20px;
-  margin: 0 auto 49px;
-  width: 284px;
-
-  @media (min-width: @tablet-width) {
-    width: 458px;
-    margin-bottom: 55px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-bottom: 64px;
-  }
+  margin: 0 auto;
 }
