--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,13 +1,19 @@
-.review-form {
-  padding: 0 20px 0;
+.form {
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-.review-form__fieldset {
+.form__fieldset {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   margin: 50px auto 0;
-  width: 280px;
+  border-style: none;
+  padding: 0;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     width: auto;
@@ -17,7 +23,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       justify-items: flex-start;
-      width: 575px;
+      width: 100%;
     }
     &:nth-child(1) {
       margin: 0;
@@ -36,27 +42,32 @@
       width: 960px;
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
   }
 }
 
-.review-form__button-container {
-  width: 280px;
+.form__fieldset-legend {
+  .title;
+  text-align: center;
+  margin-bottom: 28px;
+}
+
+.form__button-container {
   text-align: right;
   margin: 0 auto;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     grid-column-start: 1;
     grid-column-end: 3;
-    width: 648px;
     display: flex;
     margin: 48px auto 64px;
     justify-content: space-between;
     align-items: center;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     width: 768px;
   }
 }
