--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,14 +1,25 @@
 .gallery {
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+  }
 }
 
 .gallery__header {
-  width: 280px;
   margin: 0 auto;
-  padding: 30px 20px 17px;
-  text-align: center;
+  padding: 30px 0 17px;
 
   @media (min-width: @tablet-width) {
-    width: 458px;
+    padding: 66px 95px 65px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 100px 370px 65px;
   }
 }
 
@@ -22,18 +33,15 @@
 }
 
 .gallery__container {
-  width: 280px;
   margin: 0 auto;
   padding: 0;
 
   @media (min-width: @tablet-width) {
-    width: 648px;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1200px;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
@@ -41,12 +49,7 @@
 .gallery__record {
   padding: 0;
   text-align: center;
-  width: 280px;
   margin: 0 auto;
-
-  @media (min-width: @tablet-width) {
-    width: 445px;
-  }
 }
 
 .gallery__record-title {
