--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,37 +1,18 @@
 .header {
-  margin-bottom: -40px;
-
-  @media (min-width: @tablet-width) {
-    margin: 0;
-    height: 56px;
-  }
-}
-
-.header__container {
   display: flex;
-  box-sizing: border-box;
-  width: 320px;
-  padding: 0;
   margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 56px;
   position: relative;
-
-  @media (min-width: @tablet-width) {
-    width: 768px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1200px;
-  }
 }
 
 .header__logo {
-  margin-left: auto;
   z-index: 2;
-
-  @media (min-width: @tablet-width) {
-    display: none;
-  }
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
 
 .header__nav {
@@ -60,7 +41,7 @@
   z-index: 2;
   left: 0;
   top: 0;
-  width: 320px;
+  width: 100%;
   text-align: center;
   list-style-type: none;
 
@@ -69,27 +50,32 @@
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 768px;
     min-height: 56px;
     margin: 0 auto;
     background: none;
     z-index: 1;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1200px;
   }
 }
 
 .header__item {
   @media (min-width: @tablet-width) {
     display: inline-block;
+    width: 153px;
+    &:nth-child(2) {
+      margin-right: 153px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 240px;
+    &:nth-child(2) {
+      margin-right: 240px;
+    }
   }
 }
 
 .header__link {
   display: block;
-  width: auto;
   text-decoration: none;
   padding: 17px 20px 17px;
   box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
