--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,7 +9,6 @@
 @import "./blocks/advantages.less";
 @import "./blocks/button-like.less";
 @import "./blocks/button.less";
-@import "./blocks/fieldset-review.less";
 @import "./blocks/footer.less";
 @import "./blocks/gallery-list.less";
 @import "./blocks/gallery.less";
@@ -19,7 +18,7 @@
 @import "./blocks/list-service.less";
 @import "./blocks/modal-error.less";
 @import "./blocks/modal-suksessfull.less";
-@import "./blocks/review-form.less";
+@import "./blocks/form.less";
 @import "./blocks/review.less";
 @import "./blocks/search-hotel.less";
 
