--- a/4/css/style.css
+++ b/4/css/style.css
@@ -18,10 +18,23 @@ body {
   min-height: 100%;
 }
 .wrapper {
-  overflow: hidden;
+  width: 320px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   min-height: 100%;
+}
+@media (min-width: 768px) {
+  .wrapper {
+    width: 768px;
+  }
+}
+@media (min-width: 1200px) {
+  .wrapper {
+    width: 1200px;
+  }
 }
 main {
   flex-grow: 1;
@@ -44,16 +57,15 @@ button {
 }
 .advantages {
   margin: 0 auto;
+  width: 100%;
 }
 .advantages__header {
   box-sizing: border-box;
   margin: 0 auto;
-  width: 320px;
   padding: 32px 18px;
 }
 @media (min-width: 768px) {
   .advantages__header {
-    width: 768px;
     padding: 47px 124px 55px;
   }
 }
@@ -101,13 +113,11 @@ button {
 }
 @media (min-width: 768px) {
   .advantages__list {
-    width: 768px;
     flex-direction: row;
   }
 }
 @media (min-width: 1200px) {
   .advantages__list {
-    width: 1200px;
     flex-direction: row;
   }
 }
@@ -121,7 +131,6 @@ button {
 }
 .advantages__container {
   padding: 33px 18px 40px;
-  width: 320px;
   box-sizing: border-box;
 }
 @media (min-width: 768px) {
@@ -152,20 +161,17 @@ button {
   }
 }
 .advantages__list-service {
-  width: 280px;
   margin: 0;
   padding: 0 18px;
 }
 @media (min-width: 768px) {
   .advantages__list-service {
-    width: 768px;
     display: flex;
     flex-wrap: wrap;
   }
 }
 @media (min-width: 768px) {
   .advantages__list-service {
-    width: 1200px;
     margin: 0 auto;
   }
 }
@@ -193,44 +199,15 @@ button {
     margin: 0;
   }
 }
-.fieldset-review {
-  border-style: none;
-  padding: 0;
-}
-.fieldset-review__legend {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 26px;
-  color: #000000;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 28px;
-}
-.fieldset-review__label--flex {
-  display: flex;
-  align-items: center;
-  margin-top: 16px;
-}
-.footer__container {
+.footer {
   text-align: center;
   margin: 0 auto;
-  width: 320px;
   padding: 0;
   box-sizing: border-box;
-}
-@media (min-width: 768px) {
-  .footer__container {
-    width: 768px;
-  }
-}
-@media (min-width: 1200px) {
-  .footer__container {
-    width: 1200px;
-  }
+  width: 100%;
 }
 .footer__contact {
   padding: 33px 78px;
-  width: 320px;
   box-sizing: border-box;
 }
 @media (min-width: 768px) {
@@ -238,13 +215,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 768px;
     padding: 36px 60px;
-  }
-}
-@media (min-width: 1200px) {
-  .footer__contact {
-    width: 1200px;
   }
 }
 .footer__hashtag {
@@ -343,6 +314,9 @@ button {
 .gallery-list__item-image {
   margin: 0;
 }
+.gallery-list__item-container {
+  text-align: left;
+}
 @media (min-width: 768px) {
   .gallery-list__item-container {
     background-color: #F2F2F2;
@@ -366,15 +340,31 @@ button {
   margin-right: 9px;
   margin-top: 11px;
 }
+.gallery {
+  padding: 0 20px;
+}
+@media (min-width: 768px) {
+  .gallery {
+    padding: 0 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .gallery {
+    padding: 0;
+  }
+}
 .gallery__header {
-  width: 280px;
   margin: 0 auto;
-  padding: 30px 20px 17px;
-  text-align: center;
+  padding: 30px 0 17px;
 }
 @media (min-width: 768px) {
   .gallery__header {
-    width: 458px;
+    padding: 66px 95px 65px;
+  }
+}
+@media (min-width: 1200px) {
+  .gallery__header {
+    padding: 100px 370px 65px;
   }
 }
 .gallery__title {
@@ -385,33 +375,24 @@ button {
   margin-top: 20px;
 }
 .gallery__container {
-  width: 280px;
   margin: 0 auto;
   padding: 0;
 }
 @media (min-width: 768px) {
   .gallery__container {
-    width: 648px;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media (min-width: 1200px) {
   .gallery__container {
-    width: 1200px;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 .gallery__record {
   padding: 0;
   text-align: center;
-  width: 280px;
   margin: 0 auto;
-}
-@media (min-width: 768px) {
-  .gallery__record {
-    width: 445px;
-  }
 }
 .gallery__record-title {
   margin: 0;
@@ -426,41 +407,19 @@ button {
   }
 }
 .header {
-  margin-bottom: -40px;
-}
-@media (min-width: 768px) {
-  .header {
-    margin: 0;
-    height: 56px;
-  }
-}
-.header__container {
   display: flex;
-  box-sizing: border-box;
-  width: 320px;
-  padding: 0;
   margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 56px;
   position: relative;
 }
-@media (min-width: 768px) {
-  .header__container {
-    width: 768px;
-    margin: 0 auto;
-  }
-}
-@media (min-width: 1200px) {
-  .header__container {
-    width: 1200px;
-  }
-}
 .header__logo {
-  margin-left: auto;
   z-index: 2;
-}
-@media (min-width: 768px) {
-  .header__logo {
-    display: none;
-  }
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
 .header__nav {
   display: block;
@@ -487,7 +446,7 @@ button {
   z-index: 2;
   left: 0;
   top: 0;
-  width: 320px;
+  width: 100%;
   text-align: center;
   list-style-type: none;
 }
@@ -497,26 +456,31 @@ button {
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 768px;
     min-height: 56px;
     margin: 0 auto;
     background: none;
     z-index: 1;
   }
 }
-@media (min-width: 1200px) {
-  .header__list {
-    width: 1200px;
-  }
-}
 @media (min-width: 768px) {
   .header__item {
     display: inline-block;
+    width: 153px;
+  }
+  .header__item:nth-child(2) {
+    margin-right: 153px;
+  }
+}
+@media (min-width: 1200px) {
+  .header__item {
+    width: 240px;
+  }
+  .header__item:nth-child(2) {
+    margin-right: 240px;
   }
 }
 .header__link {
   display: block;
-  width: auto;
   text-decoration: none;
   padding: 17px 20px 17px;
   box-shadow: 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.2);
@@ -537,13 +501,20 @@ button {
 }
 .hero {
   box-sizing: border-box;
-  width: 320px;
-  padding: 90px 18px 85px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 90px 0 85px;
   background-color: #000000;
   background-image: url("../img/hero-background.jpg"), url("../img/hero-welcome-down.svg");
   background-repeat: no-repeat, no-repeat;
   text-align: center;
+}
+.label-form {
+  text-align: left;
+}
+.label-form__container {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
 }
 .label-form__description {
   margin-left: 16px;
@@ -590,21 +561,24 @@ button {
   height: 46px;
 }
 .label-form__text {
-  padding: 0;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000000;
+  text-transform: uppercase;
+  text-transform: none;
+  box-sizing: border-box;
+  padding: 16px;
   background-color: #F2F2F2;
   border: none;
-  width: 280px;
   min-height: 150px;
+  width: 100%;
+  resize: none;
 }
 @media (min-width: 768px) {
   .label-form__text {
-    width: 648px;
+    width: 100%;
     min-height: 160px;
-  }
-}
-@media (min-width: 768px) {
-  .label-form__text {
-    width: 768px;
   }
 }
 .list-service {
@@ -698,82 +672,108 @@ button {
 .modal-suksessfull__description {
   margin-top: 20px;
 }
-.review-form {
-  padding: 0 20px 0;
+@media (min-width: 768px) {
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
-.review-form__fieldset {
+.form__fieldset {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   margin: 50px auto 0;
-  width: 280px;
+  border-style: none;
+  padding: 0;
+  width: 100%;
 }
 @media (min-width: 768px) {
-  .review-form__fieldset {
+  .form__fieldset {
     width: auto;
   }
-  .review-form__fieldset:nth-child(n+3) {
+  .form__fieldset:nth-child(n+3) {
     grid-column-start: 1;
     grid-column-end: 3;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: flex-start;
-    width: 575px;
+    width: 100%;
   }
-  .review-form__fieldset:nth-child(1) {
+  .form__fieldset:nth-child(1) {
     margin: 0;
     margin-left: auto;
     margin-right: 28px;
   }
-  .review-form__fieldset:nth-child(2) {
+  .form__fieldset:nth-child(2) {
     margin: 0;
     margin-right: auto;
     margin-left: 28px;
   }
 }
 @media (min-width: 1200px) {
-  .review-form__fieldset:nth-child(n+3) {
+  .form__fieldset:nth-child(n+3) {
     width: 960px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
 }
-.review-form__button-container {
-  width: 280px;
+.form__fieldset-legend {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 28px;
+}
+.form__button-container {
   text-align: right;
   margin: 0 auto;
+  width: 100%;
 }
 @media (min-width: 768px) {
-  .review-form__button-container {
+  .form__button-container {
     grid-column-start: 1;
     grid-column-end: 3;
-    width: 648px;
     display: flex;
     margin: 48px auto 64px;
     justify-content: space-between;
     align-items: center;
   }
 }
-@media (min-width: 768px) {
-  .review-form__button-container {
+@media (min-width: 1200px) {
+  .form__button-container {
     width: 768px;
+  }
+}
+.review {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+@media (min-width: 768px) {
+  .review {
+    padding: 0 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .review {
+    padding: 0 120px;
   }
 }
 .review__header {
   margin: 0 auto;
-  padding: 36px 20px 28px;
-  width: 280px;
+  padding: 36px 0 28px;
 }
 @media (min-width: 768px) {
   .review__header {
-    width: 436px;
-    padding: 36px 160px 28px;
+    padding: 36px 106px 28px;
   }
 }
 @media (min-width: 1200px) {
   .review__header {
-    padding: 36px 382px 28px;
+    padding: 36px 262px 28px;
   }
 }
 .review__title {
@@ -790,38 +790,25 @@ button {
   margin: 0;
   margin-top: 24px;
 }
-@media (min-width: 768px) {
-  .review__form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-}
 .search-hotel {
   margin: 0 auto;
   text-align: center;
   box-sizing: border-box;
-  width: 320px;
+  padding: 38px 29px 49px;
 }
 @media (min-width: 768px) {
   .search-hotel {
-    width: 768px;
+    padding: 60px 155px 56px;
   }
 }
 @media (min-width: 1200px) {
   .search-hotel {
-    width: 1200px;
-  }
-}
-.search-hotel__container {
-  padding: 38px 29px 32px;
-}
-@media (min-width: 768px) {
-  .search-hotel__container {
-    padding: 60px 166px 44px;
+    padding: 60px 382px 66px;
   }
 }
 .search-hotel__title {
   margin: 0;
+  margin-bottom: 25px;
   font-size: 21px;
   font-weight: 700;
   line-height: 26px;
@@ -829,7 +816,12 @@ button {
 }
 .search-hotel__description {
   margin: 0;
-  margin-top: 20px;
+  margin-bottom: 25px;
+}
+@media (min-width: 768px) {
+  .search-hotel__description {
+    margin-bottom: 45px;
+  }
 }
 .search-hotel__link {
   font-size: 21px;
@@ -841,18 +833,6 @@ button {
   background-color: #81B3D2;
   color: #ffffff;
   padding: 16px 20px;
-  margin: 0 auto 49px;
-  width: 284px;
-}
-@media (min-width: 768px) {
-  .search-hotel__link {
-    width: 458px;
-    margin-bottom: 55px;
-  }
-}
-@media (min-width: 1200px) {
-  .search-hotel__link {
-    margin-bottom: 64px;
-  }
+  margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
