--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -25,6 +25,10 @@
 
 .gallery__title {
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .gallery__description {
@@ -55,6 +59,10 @@
 .gallery__record-title {
   margin: 0;
   margin-top: 58px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .gallery__record-description {
