--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -3,7 +3,8 @@
   width: 100%;
   padding: 90px 0 85px;
   background-color: @black;
-  background-image: url("../img/hero-background.jpg"), url("../img/hero-welcome-down.svg");
+  background-image: url("../img/hero-background.jpg"), url("../img/hero-welcome-bottom.svg");
+  background-position: 50% 30%, 0 100%;
   background-repeat: no-repeat, no-repeat;
   text-align: center;
 }
