--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -29,6 +29,9 @@
   .title;
   text-align: center;
   margin: 0;
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .review__description {
