--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -9,6 +9,22 @@
   padding: 16px 20px;
   min-width: 280px;
 
+  &:hover {
+    background-color: rgba(102, 158, 192, 1);
+  }
+
+  &:active {
+    background-color: rgba(84, 150, 189, 1);
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  &--disabled {
+    pointer-events: none;
+    cursor: default;
+    background-color: rgba(229, 229, 229, 1);
+    color: @white;
+  }
+
   @media (min-width: @tablet-width) {
     margin: 0;
   }
