--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   width: 100%;
-  height: 56px;
+  min-height: 56px;
   position: relative;
 }
 
@@ -17,14 +17,109 @@
 
 .header__nav {
   display: block;
-  margin: 17px 25px;
+  margin: auto 5px;
+  margin-left: auto;
+
+  &--closed .header__burger::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    right: 17px;
+    width: 23px;
+    height: 4px;
+    background-color: @blue;
+    box-shadow: 0 8px 0 0 @blue, 0 16px 0 0 @blue;
+  }
+
+  &--closed .header__burger:hover::before {
+    background-color: fade(@blue, 60%);
+    box-shadow:
+      0 8px 0 0 fade(@blue, 60%),
+      0 16px 0 0 fade(@blue, 60%);
+  }
+
+  &--closed .header__burger:active::before {
+    background-color: fade(@blue, 30%);
+    box-shadow:
+      0 8px 0 0 fade(@blue, 30%),
+      0 16px 0 0 fade(@blue, 30%);
+  }
+
+  &--opened .header__burger {
+    top: 0;
+    right: auto;
+    left: 0;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 24px;
+      right: 11px;
+      width: 26px;
+      height: 3px;
+      background-color: @white;
+      z-index: 3;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+      box-shadow: none;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+    }
+
+    &:hover::before,
+    &:hover::after {
+      background-color: fade(@white, 60%);
+    }
+
+    &:active::before,
+    &:active::after {
+      background-color: fade(@white, 30%);
+    }
+  }
+}
+
+@media (max-width: @tablet-width - 1px) {
+  .header__nav--closed .header__item {
+    display: none;
+  }
+
+  .header__nav--nojs .header__burger {
+    display: none;
+  }
+
+  .header__nav--opened .header__list::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    z-index: 4;
+    width: 320px;
+    height: 7px;
+    box-shadow: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+  }
+}
+
+.header__nav--nojs {
+  .header__burger {
+    display: none;
+  }
+
+  .header__item {
+    display: list-item;
+  }
 }
 
 .header__burger {
   background-color: transparent;
   border: none;
   margin: 0;
-  padding: 0;
+  padding: 24px;
+  z-index: 3;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     display: none;
@@ -58,6 +153,19 @@
 }
 
 .header__item {
+
+  @media (min-width: @mobile-width) and (max-width: @tablet-width) {
+
+    &:hover {
+      background-color: rgba(102, 158, 192, 1);
+    }
+
+    &:active {
+      background-color: rgba(84, 150, 189, 1);
+      opacity: 0.3;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     display: inline-block;
     width: 153px;
@@ -87,5 +195,9 @@
     line-height: 21px;
     color: @black;
     box-shadow: none;
+
+      &--current {
+      color: @current;
+    }
   }
 }
