--- a/5/css/style.css
+++ b/5/css/style.css
@@ -512,7 +512,6 @@ button {
 }
 .header__nav--opened .header__burger::before {
   transform: rotate(45deg);
-  box-shadow: none;
 }
 .header__nav--opened .header__burger::after {
   transform: rotate(-45deg);
@@ -531,15 +530,6 @@ button {
   }
   .header__nav--nojs .header__burger {
     display: none;
-  }
-  .header__nav--opened .header__list::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    z-index: 4;
-    width: 320px;
-    height: 7px;
-    box-shadow: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
   }
 }
 .header__nav--nojs .header__burger {
@@ -674,7 +664,7 @@ button {
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
-  width: 100%;
+  margin: 0;
   margin-bottom: 16px;
   text-transform: none;
   display: block;
@@ -696,15 +686,17 @@ button {
 .label-form__input:not(:disabled):focus-visible + .label-form__mark {
   outline: #83B3D3 solid 3px;
 }
+.label-form__input--width {
+  width: 100%;
+}
 @media (min-width: 768px) {
-  .label-form__input {
+  .label-form__input--width {
     min-width: 295px;
-    margin: 0;
     margin-bottom: 16px;
   }
 }
 @media (min-width: 1200px) {
-  .label-form__input {
+  .label-form__input--width {
     min-width: 430px;
   }
 }
