--- a/source/less/blocks/hero.less
+++ b/source/less/blocks/hero.less
@@ -4,54 +4,50 @@
   justify-content: center;
   box-sizing: border-box;
   width: 100%;
-  padding: 90px 0 85px;
+  padding: 90px 0 80px;
   background-color: @black;
-  background-image: url("../img/back-mobile.jpg"), url("../img/hero-welcome-bottom.svg");
-  background-size: cover, contain;
-  background-position: 50% 30%, center;
+  background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-mobile.jpg");
+  background-position: bottom -1px center, 50% 30%;
   background-repeat: no-repeat no-repeat;
-  text-align: center;
+  background-size: 200%, cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/back-mobile@2x.jpg"), url("../img/hero-welcome-bottom.svg");
-    background-size: cover, contain;
-    background-position: 50% 30%, center;
-    background-repeat: no-repeat no-repeat;
+    background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-mobile@2x.jpg");
   }
 
   @media (min-width: @tablet-width) {
-    background-image: url("../img/back-desktop.png"), url("../img/hero-welcome-bottom.svg");
+    background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-desktop.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/back-desktop@2x.png"), url("../img/hero-welcome-bottom.svg");
+      background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-desktop@2x.jpg");
+      background-size: 150%, cover;
     }
   }
 
+  @media (min-width: @desktop-width) {
+    background-size: 100%, cover;
+  }
+
   &--form {
-    background-image: url("../img/back-form-mobile.png"), url("../img/hero-welcome-bottom.svg");
+    background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-form-mobile.jpg");
     background-position: 50% 100%, center;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/back-form-mobile@2x.png"), url("../img/hero-welcome-bottom.svg");
+      background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-form-mobile@2x.jpg");
     }
 
     @media (min-width: @tablet-width) {
-      background-image: url("../img/back-form-tablet.png");
+      background-image: url("../img/back-form-desktop.jpg");
       min-height: 290px;
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/back-form-tablet@2x.png"), url("../img/hero-welcome-bottom.svg");
+        background-image: url("../img/hero-welcome-bottom.svg"), url("../img/back-form-desktop@2x.jpg");
       }
     }
 
     @media (min-width: @desktop-width) {
-      background-image: url("../img/back-form-desktop.png");
       min-height: 300px;
       background-position: 50% 100%, center;
-
-      @media (min-resolution: 2dppx) {
-        background-image: url("../img/back-form-desktop@2x.png"), url("../img/hero-welcome-bottom.svg");
-      }
     }
   }
 }
