--- a/source/less/blocks/search-hotel.less
+++ b/source/less/blocks/search-hotel.less
@@ -16,8 +16,7 @@
 .search-hotel__title {
   margin: 0;
   margin-bottom: 25px;
-  .title;
-  font-size: 30px;
+  .title-bigger(bigger; 18px);
 }
 
 .search-hotel__description {
