--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,7 +7,6 @@
 
 // Блоки компонентов
 @import "./blocks/advantages.less";
-@import "./blocks/button-like.less";
 @import "./blocks/button.less";
 @import "./blocks/footer.less";
 @import "./blocks/gallery-list.less";
@@ -21,6 +20,8 @@
 @import "./blocks/form.less";
 @import "./blocks/review.less";
 @import "./blocks/search-hotel.less";
+@import "./blocks/modal-container-suksessfull.less";
+@import "./blocks/modal-container-error.less";
 
 // Переменные
 @import "./variables.less";
