--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -10,22 +10,25 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin: 50px auto 0;
+  margin: 30px 0 auto;
   border-style: none;
   padding: 0;
   width: 100%;
 
   @media (min-width: @tablet-width) {
     width: auto;
+
     &:nth-child(n+3) {
       flex-direction: row;
       width: 100%;
       justify-content: center;
     }
+
     &:nth-child(1) {
       margin: 0;
       margin-right: 28px;
     }
+
     &:nth-child(2) {
       margin: 0;
     }
@@ -45,6 +48,21 @@
   .title-bigger(bigger; 18px);
   text-align: center;
   margin-bottom: 28px;
+  padding: 0;
+
+  &::before {
+    display: inline-block;
+    content: "";
+    position: relative;
+    width: 280px;
+    height: 1px;
+    background-color: rgba(229, 229, 229, 1);
+    top: -25px;
+
+    @media (min-width: @tablet-width) {
+      content: none;
+    }
+  }
 }
 
 .form__fieldset-container {
