--- a/source/less/blocks/gallery-list.less
+++ b/source/less/blocks/gallery-list.less
@@ -19,15 +19,19 @@
       grid-column-start: 1;
       grid-column-end: 4;
     }
+
+    position: relative;
   }
 }
 
 .gallery-list__item-image {
-  margin: 0
+  margin: 0;
 }
 
 .gallery-list__item-container {
+  box-sizing: border-box;
   text-align: left;
+
   @media (min-width: @tablet-width) {
     background-color: @input;
     display: flex;
@@ -36,9 +40,11 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-color: @black;
-    opacity: 0.3;
+    background-color: rgba(0, 0, 0, 0.2);
     color: @white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   }
 }
 
@@ -47,7 +53,25 @@
 }
 
 .gallery-list__item-button {
+  border: none;
   padding: 0;
   margin-right: 9px;
   margin-top: 11px;
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+  }
+
+  &::after {
+    display: inline-block;
+    content: "";
+    mask-image: url("../img/sprite.svg#button-like");
+    background-color: rgba(0, 0, 0, 3);
+    width: 23px;
+    height: 21px;
+
+    @media (min-width: @desktop-width) {
+      background-color: rgba(255, 255, 255, 1);
+    }
+  }
 }
