--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -72,3 +72,49 @@
     margin: 25px 0 66px;
   }
 }
+
+.gallery__record-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 177px;
+  background-color: @black;
+  background-image: url("../img/video-mobile.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/video-mobile@2x.jpg");
+  }
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/video-tablet.jpg");
+    min-height: 500px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/video-tablet@2x.jpg");
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/video-desktop.jpg");
+    max-width: 800px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/video-desktop@2x.jpg");
+    }
+  }
+}
+
+.gallery__button {
+  background-color: transparent;
+  border: none;
+  background-image: url(../img/sprite.svg#button-play);
+  width: 48px;
+  height: 54px;
+  position: relative;
+}
