--- a/source/less/blocks/label-form.less
+++ b/source/less/blocks/label-form.less
@@ -20,7 +20,7 @@
   }
 }
 
-.label-form__container {
+.label-form--container {
   display: flex;
   align-items: center;
   margin-top: 16px;
@@ -42,6 +42,7 @@
   border: none;
   padding: 16px;
   box-sizing: border-box;
+
 
   &:hover {
     background-color: rgba(229, 229, 229, 1);
@@ -70,6 +71,28 @@
 
     @media (min-width: @desktop-width) {
       min-width: 430px;
+    }
+  }
+
+  &--phone {
+    width: 100%;
+    background-image: url("../img/sprite.svg#icon-phone");
+    background-position: 112px;
+
+    @media (min-width: @desktop-width) {
+      min-width: 430px;
+      background-position: 187px;
+    }
+  }
+
+  &--mail {
+    width: 100%;
+    background-image: url("../img/sprite.svg#icon-mail");
+    background-position: 112px;
+
+    @media (min-width: @desktop-width) {
+      min-width: 430px;
+      background-position: 187px;
     }
   }
 }
