--- a/source/less/blocks/modal-suksessfull.less
+++ b/source/less/blocks/modal-suksessfull.less
@@ -1,13 +1,68 @@
 .modal-suksessfull {
-  display: none;
-  padding: 45px 40px 35px;
+  position: relative;
+  background-color: @white;
+  margin: auto;
+  box-sizing: border-box;
+  width: 320px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    width: 640px;
+  }
+}
+
+.modal-suksessfull__container {
+  margin: 43px 39px 50px;
 }
 
 .modal-suksessfull__title {
   .title;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    display: inline-block;
+  }
 }
 
 .modal-suksessfull__description {
-  margin-top: 20px;
+  margin: 20px 0;
+
+  @media (min-width: @tablet-width) {
+    margin: 40px 0;
+  }
+}
+
+.modal-suksessfull__button {
+  .title;
+  width: 100%;
+  height: 98px;
+  color: @white;
+  box-sizing: border-box;
+  border: solid 20px rgba(242, 242, 242, 1);
+  background-color: @blue;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 146px;
+    border-top: 44px solid rgba(242, 242, 242, 1);
+    border-bottom: 44px solid rgba(242, 242, 242, 1);
+    border-right: 91px solid rgba(242, 242, 242, 1);
+    border-left: 91px solid rgba(242, 242, 242, 1);
+  }
+
+  &:hover {
+    background-color: rgba(102, 158, 192, 1);
+  }
+
+  &:active {
+    background-color: rgba(84, 150, 189, 1);
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  &--disabled {
+    pointer-events: none;
+    cursor: default;
+    background-color: rgba(229, 229, 229, 1);
+    color: @white;
+  }
 }
